[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/weapon/Barrel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/weapon/enemy/EMachineGun.gd" type="Script" id=2]
[ext_resource path="res://scenes/ammo/enemy/EBullet.tscn" type="PackedScene" id=3]


[node name="EMachineGun" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="LeftBarrel" parent="." instance=ExtResource( 1 )]
position = Vector2( -10, 0 )
rotation = 1.5708
firerate = 40.0
ammo_speed = Vector2( 60, 60 )
ammo = ExtResource( 3 )

[node name="RightBarrel" parent="." instance=ExtResource( 1 )]
position = Vector2( 10, 0 )
rotation = 1.5708
firerate = 40.0
ammo_speed = Vector2( 60, 60 )
ammo = ExtResource( 3 )

[node name="StartShoot" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StopShoot" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="StartShoot" to="." method="on_start_shoot_timeout"]
[connection signal="timeout" from="StopShoot" to="." method="on_stop_shoot_timeout"]
